# proyecto-control-asistencia

./: README.md
Node-Red/: BD_User.txt  flows.json  flows_all.json  readme.txt
backend/: schema.sql
backend/api-control-asistencia/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test-requirements.txt
backend/api-control-asistencia/core/: config.py  security.py
backend/api-control-asistencia/database/: session.py
backend/api-control-asistencia/models/: Asistencias.py  Relations.py  Usuarios.py
backend/api-control-asistencia/schemas/: asistencia.py  token.py  usuario.py
backend/api-control-asistencia/services/: asistencia_service.py  usuario_service.py
backend/api-control-asistencia/tests/: conftest.py  test_.py  test_asistencias.py  test_usuarios.py
docs/: presentacion_proyecto_control_de_asistencia.pptx
media/: pagina_web_app_2_1.fig
mfrc522/: AWS-IoT.ino  mein.ino  mfrc522.ino  secrets.h  time_utils.ino  users.cpp  users.h  wifi.ino
